--- a/frontend/src/app/pages/admin/admin.component.html
+++ b/frontend/src/app/pages/admin/admin.component.html
@@ -22,10 +22,10 @@
                             Dashboard <span class="sr-only">(current)</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
+                    <li class="nav-item" >
+                        <a class="nav-link" [routerLink]="[ '/clientes' ]">
                             <span data-feather="file"></span>
-                            Orders
+                            Clientes
                         </a>
                     </li>
                     <li class="nav-item">
