--- a/frontend/src/app/pages/admin/clientes/clientes-form/clientes-form.component.html
+++ b/frontend/src/app/pages/admin/clientes/clientes-form/clientes-form.component.html
@@ -1,4 +1,4 @@
-<form #form="ngForm">
+<form #form="ngForm" (ngSubmit)="submit(form)">
     <div class="modal-header">
         <h4 class="modal-title" id="modal-basic-title">Cadastro de Cliente</h4>
         <button (click)="close()" type="button" class="close" aria-label="Close">
@@ -40,8 +40,8 @@
         <div class="row">
             <div class="col-sm-3 form-group">
                 <span>Cep:</span>
-                <input type="number" class="form-control" mask="00.000-000" [(ngModel)]="dados.cep" name="cep"
-                    (blur)="getAddress($event.target.value)">
+                <input type="text" class="form-control" mask="00.000-000" [(ngModel)]="dados.cep" name="cep"
+                    (blur)="getAddress($event.target.value)" >
             </div>
         </div>
         <div class="row">
