--- a/frontend/src/app/pages/admin/clientes/clientes.component.html
+++ b/frontend/src/app/pages/admin/clientes/clientes.component.html
@@ -11,22 +11,34 @@
     <table class="table table-striped table-sm">
         <thead>
             <th>#</th>
+            <th>Tipo</th>
             <th>Nome</th>
-            <th>Preço</th>
-            <th>Status</th>
+            <th>Telefone</th>
+            <th>Cep</th>
+            <th>Uf</th>
+
             <th>
                 
 
             </th>
         </thead>
         <tbody>
-            <tr *ngFor="">
-                <td></td>
-                <td></td>
+            <tr *ngFor="let item of datasource">
+                <td>{{item.id}}</td>
+                <td scope="col">
+                    <span *ngIf="item.tipo == 1 ">Pessoa Fisica</span>
+                    <span *ngIf="item.tipo == 2 ">Pessoa juridica</span>
+                </td>
+                <td>{{item.razao}}</td>
+                <td>{{item.cnpj}}</td>
+                <td>{{item.cep}}</td>
+                <td>{{item.uf}}</td>
+
+              
                 <td>
                     
-                    <button class="btn btn-sm btn-primary mr-1" ><i class="fas fa-pen"></i></button>
-                    <button class="btn btn-sm btn-danger"><i class="fas fa-trash"></i></button>
+                    <button class="btn btn-sm btn-primary mr-1" (click)="openCliente(item)"><i class="fas fa-pen"></i></button>
+                    <button class="btn btn-sm btn-danger" (click)="deleteConfirm(item)"><i class="fas fa-trash"></i></button>
                 </td>
             </tr>
         </tbody>
