--- a/frontend/src/app/pages/admin/reception/reception.component.html
+++ b/frontend/src/app/pages/admin/reception/reception.component.html
@@ -6,9 +6,10 @@
 <div>
     <div class="row">
         <div class="col-sm-3" *ngFor="let quarto of quartos">
-            <div class="card">
+            <div class="card card-custom" (click)="openQuarto(quarto)" 
+            [ngClass]="{'quarto-close': quarto.open == 0, 'quarto-open': quarto.open == 1}">
                 <i class="fas fa-door-open"></i>
-                <h4>Quarto</h4>
+                <h4>{{quarto.nome}}</h4>
             </div>
         </div>
     </div>
